# dacareowl_shuup_firebase

./: MANIFEST.in  admin.py  auth_urls.py  dashboard_items.py  forms.py  resources.py  setup.cfg  signals.py  utils.py
locale/de/LC_MESSAGES/: django.mo
locale/fi_FI/LC_MESSAGES/: djangojs.mo
locale/fr_CA/LC_MESSAGES/: django.mo
locale/sv_SE/LC_MESSAGES/: djangojs.mo
shuup_firebase_auth_daycareowl.egg-info/: PKG-INFO
src/shuup_firebase_auth/: __init__.py  admin.py  apps.py  forms.py  models.py  settings.py  urls.py
src/shuup_firebase_auth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shuup_firebase_auth/locale/de/LC_MESSAGES/: djangojs.mo
src/shuup_firebase_auth/locale/es/LC_MESSAGES/: django.mo  djangojs.mo
src/shuup_firebase_auth/locale/fi_FI/LC_MESSAGES/: django.mo
src/shuup_firebase_auth/locale/fr_CA/LC_MESSAGES/: djangojs.mo
src/shuup_firebase_auth/migrations/: 0001_initial.py
src/shuup_firebase_auth/shuup_firebase_auth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shuup_firebase_auth/shuup_firebase_auth_daycareowl.egg-info/: SOURCES.txt
src/shuup_firebase_auth/templates/shuup_firebase_auth/: customer_dashboard_item.jinja  logout.jinja  reset_password.jinja
src/shuup_firebase_auth/views/: customer_information.py
static/: firebaseui.972d0390.css  shuup-firebase-auth.css  shuup-firebase-auth.js
templates/shuup_firebase_auth/: auth.jinja  edit_admin_customer.jinja  edit_customer.jinja  macros.jinja
templates/shuup_firebase_auth/macros/: contact.jinja
templatetags/: __init__.py
views/: auth.py  login.py  register.py
(+5 files in other folders)
