[metadata]
name = shuup-firebase-auth
version = 0.0.1
author = Julian Baumgartner
author_email = germanp34e@aol.com
description = Firebase auth for shuup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyptocrypto/daycareowl_shuup_firebase
project_urls =
    Bug Tracker = https://github.com/hyptocrypto/daycareowl_shuup_firebase/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.8

[options.packages.find]
where = src
